Add created_at field for given fines
